--- a/THANKS
+++ b/THANKS
@@ -119,6 +119,7 @@ Roland Baudin <roland(dot)baudin(at)thalesaleniaspace(dot)com> - fr
 Lionel Fuentes <funto66(at)gmail(dot)com> - fr
 Benjamin Ballet <benjamin(dot)ballet(at)gmail(dot)com> -fr
 José Manuel Castroagudín Silva <chavescesures(at)mail(dot)com> - gl
+Asheesh Ranjan <asheeshranjan1(at)gmail(dot)com> - hi
 Yosef Or Botschko <yosefor3(at)walla(dot)com> - he
 Gabor Kmetyko aka kilo <kg_kilo(at)freemail(dot)hu> - hu
 M.Baldinelli <m(dot)baldinelli(at)agora(dot)it> - it
