--- a/THANKS
+++ b/THANKS
@@ -151,6 +151,7 @@ John Wehin <john(dot)wehin(at)gmail(dot)com> - ru_RU
 Maxim Musatov <m1kc(at)yandex(dot)ru> - ru_RU
 Tomáš Vadina <kyberdev(at)gmail(dot)com> - sk
 Jože Klepec <joze(dot)klepec(at)siol(dot)net> - sl
+Nikola Radovanovic <cobisimo(at)gmail(dot)com> - sr
 Tony Mattsson <superxorn(at)gmail(dot)com> - sv
 Gürkan Gür <seqizz(at)gmail(dot)com> - tr
 Boris Dibrov <dibrov(dot)bor(at)gmail(dot)com> - uk
