Replace ru_RU with simple ru inside credantials as we only have one Russiian translation

--- a/THANKS
+++ b/THANKS
@@ -143,12 +143,12 @@ Alexandre Moreira <alexandream(at)gmail(dot)com> - pt_BR
 Adrovane Marques Kade <adrovane(at)gmail(dot)com> - pt_BR
 Rafael Peregrino da Silva <rperegrino(at)linuxnewmedia(dot)com(dot)br> - pt_BR
 Alex Eftimie <alex(at)rosedu(dot)org> - ro
-brahmann_ <brahmann(at)pisem(dot)net> - ru_RU
-Nikita E. Shalaev <nshalaev(at)eu(dot)spb(dot)ru> - ru_RU
-stat.c <Static-Const(at)yandex(dot)ru> - ru_RU
-Andrew Drynov <adryno(at)gmail(dot)com> - ru_RU
-John Wehin <john(dot)wehin(at)gmail(dot)com> - ru_RU
-Maxim Musatov <m1kc(at)yandex(dot)ru> - ru_RU
+brahmann_ <brahmann(at)pisem(dot)net> - ru
+Nikita E. Shalaev <nshalaev(at)eu(dot)spb(dot)ru> - ru
+stat.c <Static-Const(at)yandex(dot)ru> - ru
+Andrew Drynov <adryno(at)gmail(dot)com> - ru
+John Wehin <john(dot)wehin(at)gmail(dot)com> - ru
+Maxim Musatov <m1kc(at)yandex(dot)ru> - ru
 Tomáš Vadina <kyberdev(at)gmail(dot)com> - sk
 Jože Klepec <joze(dot)klepec(at)siol(dot)net> - sl
 Nikola Radovanovic <cobisimo(at)gmail(dot)com> - sr
